force-app/main/default/objects/Account/fields/DescartaORCliente__c.field-meta.xml
<CustomField>
    <fullName>DescartaORCliente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>campo para ver si se descarta o no el cliente</description>
    <label>DescartaORCliente</label>
    <type>Checkbox</type>
</CustomField>