force-app/main/default/objects/Account/fields/SendAdress__c.field-meta.xml
<CustomField>
    <fullName>SendAdress__c</fullName>
    <label>SendAdress</label>
    <type>TextArea</type>
</CustomField>