force-app/main/default/objects/Account/listViews/KanbamCuentas.listView-meta.xml
<ListView>
    <fullName>KanbamCuentas</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>KanbamCuentas</label>
</ListView>